--- a/gst-plugins-base/gst-libs/gst/fft/Makefile.am
+++ b/gst-plugins-base/gst-libs/gst/fft/Makefile.am
@@ -54,6 +54,7 @@ gir_cincludes=$(patsubst %,--c-include='gst/fft/%',$(libgstfft_@GST_MAJORMINOR@_
 GstFft-@GST_MAJORMINOR@.gir: $(INTROSPECTION_SCANNER) libgstfft-@GST_MAJORMINOR@.la
 	$(INTROSPECTION_SCANNER) -v --namespace GstFft \
 		--nsversion=@GST_MAJORMINOR@ \
+		--strip-prefix=Gst \
 		$(gir_cincludes) \
 		--add-include-path=`$(PKG_CONFIG) --variable=libdir gstreamer-0.10`/gst \
 		--library=gstfft-0.10 \
