--- a/gst-plugins-base/gst-libs/gst/netbuffer/Makefile.am
+++ b/gst-plugins-base/gst-libs/gst/netbuffer/Makefile.am
@@ -19,6 +19,7 @@ gir_cincludes=$(patsubst %,--c-include='gst/netbuffer/%',$(libgstnetbufferinclud
 GstNetbuffer-@GST_MAJORMINOR@.gir: $(INTROSPECTION_SCANNER) libgstnetbuffer-@GST_MAJORMINOR@.la
 	$(INTROSPECTION_SCANNER) -v --namespace GstNetbuffer \
 		--nsversion=@GST_MAJORMINOR@ \
+		--strip-prefix=Gst \
 		$(gir_cincludes) \
 		--add-include-path=`$(PKG_CONFIG) --variable=libdir gstreamer-0.10`/gst \
 		--library=gstnetbuffer-0.10 \
