--- a/gst-plugins-base/gst-libs/gst/rtp/Makefile.am
+++ b/gst-plugins-base/gst-libs/gst/rtp/Makefile.am
@@ -30,6 +30,7 @@ gir_cincludes=$(patsubst %,--c-include='gst/rtp/%',$(libgstrtpinclude_HEADERS))
 GstRtp-@GST_MAJORMINOR@.gir: $(INTROSPECTION_SCANNER) libgstrtp-@GST_MAJORMINOR@.la
 	$(INTROSPECTION_SCANNER) -v --namespace GstRtp \
 		--nsversion=@GST_MAJORMINOR@ \
+		--strip-prefix=Gst \
 		$(gir_cincludes) \
 		-I$(top_srcdir)/gst-libs \
 		--add-include-path=`$(PKG_CONFIG) --variable=libdir gstreamer-0.10`/gst \
