--- a/gst-plugins-bad/ext/ladspa/Makefile.am
+++ b/gst-plugins-bad/ext/ladspa/Makefile.am
@@ -6,7 +6,7 @@ libgstladspa_la_CFLAGS = \
 	$(GST_PLUGINS_BASE_CFLAGS) \
 	$(GST_CONTROLLER_CFLAGS) $(GST_CFLAGS) $(LRDF_CFLAGS)
 libgstladspa_la_LIBADD = \
-	$(top_builddir)/gst-libs/gst/signalprocessor/libgstsignalprocessor.la \
+	$(top_builddir)/gst-libs/gst/signalprocessor/libgstsignalprocessor-@GST_MAJORMINOR@.la \
 	$(GST_PLUGINS_BASE_LIBS) -lgstaudio-$(GST_MAJORMINOR) \
 	$(LIBM) $(LRDF_LIBS)
 libgstladspa_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
