--- a/gst-plugins-bad/gst-libs/gst/signalprocessor/Makefile.am
+++ b/gst-plugins-bad/gst-libs/gst/signalprocessor/Makefile.am
@@ -1,8 +1,10 @@
-lib_LTLIBRARIES = libgstsignalprocessor.la
+lib_LTLIBRARIES = libgstsignalprocessor-@GST_MAJORMINOR@.la
 
-noinst_HEADERS = gstsignalprocessor.h
+libgstsignalprocessor_@GST_MAJORMINOR@includedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/gst/signalprocessor
+libgstsignalprocessor_@GST_MAJORMINOR@include_HEADERS = gstsignalprocessor.h
 
-libgstsignalprocessor_la_SOURCES = gstsignalprocessor.c
-libgstsignalprocessor_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS)
-libgstsignalprocessor_la_LDFLAGS = $(GST_PLUGINS_BASE_LIBS)
+libgstsignalprocessor_@GST_MAJORMINOR@_la_SOURCES = gstsignalprocessor.c
+libgstsignalprocessor_@GST_MAJORMINOR@_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS)
+libgstsignalprocessor_@GST_MAJORMINOR@_la_LIBADD = $(GST_PLUGINS_BASE_LIBS) $(GST_LIBS) -lgstaudio-@GST_MAJORMINOR@
+libgstsignalprocessor_@GST_MAJORMINOR@_la_LDFLAGS = $(GST_LIB_LDFLAGS) $(GST_ALL_LDFLAGS) $(GST_LT_LDFLAGS)
 
