pnmenc: Fix negotiation issues and refcount leaks

--- a/gst-plugins-bad/gst/pnm/Makefile.am
+++ b/gst-plugins-bad/gst/pnm/Makefile.am
@@ -1,8 +1,8 @@
 plugin_LTLIBRARIES = libgstpnm.la
 
 libgstpnm_la_SOURCES = gstpnmutils.c gstpnm.c gstpnmdec.c gstpnmenc.c
-libgstpnm_la_CFLAGS = $(GST_CFLAGS)
-libgstpnm_la_LIBADD = $(GST_LIBS)
+libgstpnm_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS)
+libgstpnm_la_LIBADD = $(GST_PLUGINS_BASE_LIBS) $(GST_LIBS) -lgstvideo-@GST_MAJORMINOR@
 libgstpnm_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
 noinst_HEADERS = gstpnmdec.h gstpnmutils.h gstpnmenc.h
