interfaces: API: Add GstStreamVolume interface
Fixes bug #567660.

--- a/gst-plugins-base/gst-libs/gst/interfaces/Makefile.am
+++ b/gst-plugins-base/gst-libs/gst/interfaces/Makefile.am
@@ -10,6 +10,7 @@ headers_interfaces = 		\
 	mixertrack.h		\
 	navigation.h		\
 	propertyprobe.h		\
+	streamvolume.h          \
 	tuner.h			\
 	tunernorm.h		\
 	tunerchannel.h		\
@@ -43,6 +44,7 @@ libgstinterfaces_@GST_MAJORMINOR@_la_SOURCES = \
 	mixertrack.c		\
 	navigation.c		\
 	propertyprobe.c		\
+	streamvolume.c          \
 	tuner.c			\
 	tunernorm.c		\
 	tunerchannel.c		\
@@ -54,7 +56,7 @@ nodist_libgstinterfaces_@GST_MAJORMINOR@_la_SOURCES = 	\
 	interfaces-marshal.h
 
 libgstinterfaces_@GST_MAJORMINOR@_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS)
-libgstinterfaces_@GST_MAJORMINOR@_la_LIBADD = $(GST_LIBS) 
+libgstinterfaces_@GST_MAJORMINOR@_la_LIBADD = $(GST_LIBS) $(LIBM) 
 libgstinterfaces_@GST_MAJORMINOR@_la_LDFLAGS = $(GST_LIB_LDFLAGS) $(GST_ALL_LDFLAGS) $(GST_LT_LDFLAGS)
 
 BUILT_SOURCES = \
