introspection: Build pkgconfig before all libraries and set PKG_CONFIG_PATH
This way g-ir-scanner can find the gstreamer-*-0.10 pkg-config files.

--- a/gst-plugins-base/Makefile.am
+++ b/gst-plugins-base/Makefile.am
@@ -7,6 +7,7 @@ SUBDIRS_EXT =
 endif
 
 SUBDIRS = 			\
+	pkgconfig		\
 	gst-libs 		\
 	gst sys $(SUBDIRS_EXT) 	\
 	tools 			\
@@ -14,10 +15,10 @@ SUBDIRS = 			\
 	docs			\
 	po 			\
 	common 			\
-	m4 			\
-	pkgconfig
+	m4
 
 DIST_SUBDIRS = 			\
+	pkgconfig		\
 	docs			\
 	gst-libs		\
 	gst sys ext		\
@@ -25,8 +26,7 @@ DIST_SUBDIRS = 			\
 	tests 			\
 	po 			\
 	common 			\
-	m4 			\
-	pkgconfig
+	m4
 
 # include before EXTRA_DIST for win32 assignment
 include $(top_srcdir)/common/win32.mak
