--- a/gst-plugins-base/gst-libs/gst/interfaces/Makefile.am
+++ b/gst-plugins-base/gst-libs/gst/interfaces/Makefile.am
@@ -80,7 +80,8 @@ gir_cincludes=$(patsubst %,--c-include='gst/interfaces/%',$(libgstinterfacesincl
 gir_cincludes+=$(patsubst %,--c-include='gst/interfaces/%',$(nodist_libgstinterfacesinclude_HEADERS))
 
 GstInterfaces-@GST_MAJORMINOR@.gir: $(INTROSPECTION_SCANNER) libgstinterfaces-@GST_MAJORMINOR@.la
-	$(INTROSPECTION_SCANNER) -v --namespace GstInterfaces \
+	PKG_CONFIG_PATH="$(PKG_CONFIG_PATH):$(top_builddir)/pkgconfig" \
+		$(INTROSPECTION_SCANNER) -v --namespace GstInterfaces \
 		--nsversion=@GST_MAJORMINOR@ \
 		--strip-prefix=Gst \
 		$(gir_cincludes) \
